objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Default</fullName>
        <description>Default Lead Process for NMD</description>
        <isActive>true</isActive>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Re-engaged</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Enterprise Solutions</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurture</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Re-engaged</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the value of Org account for which lead is associated.</description>
        <inlineHelpText>Enter the name of the organization associated with this new Opportunity. If an existing organization does not appear when typing the name, click "New Organization" to create a new one.</inlineHelpText>
        <label>Organization</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.Account_Type__c</field>
                <operation>equals</operation>
                <value>Org</value>
            </filterItems>
            <filterItems>
                <field>Account.Account_Type__c</field>
                <operation>equals</operation>
                <value>Sales</value>
            </filterItems>
            <infoMessage>Leads can only be associated to accounts havinng account type 'Org'.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Account)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Owner__c</fullName>
        <formula>/* Owner:User.IsActive */
OR(Owner:User.IsActive, LEFT(OwnerId,3) = '00G')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Owner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliate_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AutoRabit commit</description>
        <label>Affiliate Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_Days__c</fullName>
        <description>Days between Converted and Created Date if Converted = True. Otherwise Today() - Created Date</description>
        <formula>IF( IsConverted = TRUE,  ConvertedDate -  DATEVALUE(CreatedDate) ,  TODAY()  -  DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alcohol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alcohol?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <description>This field is used to store the alternate email id.</description>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Behavioral_Lead_Score__c</fullName>
        <description>Used for tracking SFMC Behavioral Lead Score</description>
        <label>Behavioral Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker_ACH__c</fullName>
        <label>Broker ACH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Company_Name__c</fullName>
        <label>Broker Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Email__c</fullName>
        <label>Broker Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Broker_Phone__c</fullName>
        <label>Broker Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Brokerage_Company_Name__c</fullName>
        <label>Brokerage Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Interested_In__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building Interested In</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_Interested_Name__c</fullName>
        <description>Workflow will update the Building Interested name in this field.</description>
        <label>Building Interested Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Email__c</fullName>
        <description>This field is use to store value for leads business contact email</description>
        <label>Business Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Name__c</fullName>
        <description>This field is use to store value for business contact name</description>
        <label>Business Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>By_Pass_Journey_Creation_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If lead is creating from Journey Importer (Kickbox) then while uploading the file if user check Generate Journey. Then we will check it as true and while creating journey we not check Journey Creation Criteria of the lead source and lead source details and user and queue.</description>
        <inlineHelpText>If lead is creating from Journey Importer (Kickbox) then while uploading the file if user check Generate Journey. Then we will check it as true and while creating journey we not check Journey Creation Criteria of the lead source and lead source details</inlineHelpText>
        <label>By Pass Journey Creation Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Lead_Assignment_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to Bypass Lead Assignment Rules if it is checked.</description>
        <label>Bypass Lead Assignment Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Processing_Stage__c</fullName>
        <label>Bypass Processing Stage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assignment Complete</fullName>
                </value>
                <value>
                    <fullName>Behavioural Scored</fullName>
                </value>
                <value>
                    <fullName>Demographic Scored</fullName>
                </value>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>Market Identified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CI360_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unomy Company</label>
        <referenceTo>CICompany__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CallRail_Answered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CallRail Answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CallRail_Destination_Number__c</fullName>
        <label>CallRail Destination Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CallRail_Duration__c</fullName>
        <label>CallRail Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallRail_ID__c</fullName>
        <externalId>true</externalId>
        <label>CallRail ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_To_Converter__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is unchecked using 'Call Lead Converter' process builder to avoid future call to lead converter method</description>
        <label>Call To Converter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Id</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Catering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Catering?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Duplicates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If we are inserting leads form Lead/ Journey importer with kickbox verification then it will be true and Lead convertor class will check lead duplicacy.</description>
        <label>Check Duplicates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City (Custom)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Brooklyn</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Washington</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_of_Interest__c</fullName>
        <label>City of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BOS</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>NYC</fullName>
                </value>
                <value>
                    <fullName>SF</fullName>
                </value>
                <value>
                    <fullName>SEA</fullName>
                </value>
                <value>
                    <fullName>LON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleansed_Company_Name__c</fullName>
        <label>Cleansed Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Unomy_Company_Name__c</fullName>
        <description>Cleansed Unomy Company Name value</description>
        <label>Cleansed Unomy Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cold_Email_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cold Email Response?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Payment_Information_ACH__c</fullName>
        <label>Commission Payment Information (ACH)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Fact__c</fullName>
        <label>Company Fact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-20</fullName>
                </value>
                <value>
                    <fullName>21-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-200</fullName>
                </value>
                <value>
                    <fullName>201+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DO NOT Call the Lead directly if this is checked. Please call the Broker instead.</inlineHelpText>
        <label>Contact Broker Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Activities__c</fullName>
        <label>Count of Activities</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>DZ</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BY</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BZ</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>BV</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>IO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_CRM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom CRM User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Inquiry__c</fullName>
        <formula>TODAY()- Inquiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Inquiry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>if (today() - LastActivityDate &gt;=0,
min(today() - LastActivityDate , now() - LastModifiedDate ),now() - LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographic_Lead_Score_Adj__c</fullName>
        <description>The data team is going to send a demographic score from RedShift - this includes person attributes and pre-disposition to MQL...this value is an "aging" adjustment based upon time to process lead.</description>
        <label>Demographic Lead Score Adj</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographic_Lead_Score__c</fullName>
        <description>Used for SFMC tracking Demographic Lead Score</description>
        <label>Demographic Lead Score</label>
        <precision>11</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Domain__c</fullName>
        <formula>RIGHT(Email,LEN(Email)-FIND('@',Email))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Domian__c</fullName>
        <formula>RIGHT(Email,LEN(Email)-FIND('@',Email))</formula>
        <label>Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_First_Name__c</fullName>
        <formula>TRIM(LEFT(LastName, FIND(" ",LastName)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Quality__c</fullName>
        <description>Undeliverable: Email is invalid, domain doesn’t exist 
Deliverable: Valid Email, Domain exist 
Risky: Domain existed, but email may not exist 
Pending: Default Value 
Status of Email Id from Kickbox API</description>
        <inlineHelpText>Undeliverable: Email is invalid, domain doesn’t exist 
Deliverable: Valid Email, Domain exist 
Risky: Domain existed, but email may not exist 
Pending: Default Value 
Status of Email Id from Kickbox API</inlineHelpText>
        <label>Email Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Undeliverable</fullName>
                </value>
                <value>
                    <fullName>Deliverable</fullName>
                </value>
                <value>
                    <fullName>Risky</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engage_Emails_Sent__c</fullName>
        <label>Engage Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Invite__c</fullName>
        <label>Event Invite</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Lead_Source_Detail__c</fullName>
        <label>Event Lead Source Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Lead_Source__c</fullName>
        <label>Event Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>WeWork.com</fullName>
                </value>
                <value>
                    <fullName>Membership Team</fullName>
                </value>
                <value>
                    <fullName>Member Referral</fullName>
                </value>
                <value>
                    <fullName>Client Referral</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Community Manager</fullName>
                </value>
                <value>
                    <fullName>Walk In</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>WeWork Member</fullName>
                </value>
                <value>
                    <fullName>EventUp</fullName>
                </value>
                <value>
                    <fullName>events@wework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Size__c</fullName>
        <label>Event Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-25</fullName>
                </value>
                <value>
                    <fullName>25-50</fullName>
                </value>
                <value>
                    <fullName>75-100</fullName>
                </value>
                <value>
                    <fullName>100+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Space_Detail__c</fullName>
        <description>If other, specify an event space</description>
        <inlineHelpText>If other, specify an event space</inlineHelpText>
        <label>Event Space Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Space_Interested__c</fullName>
        <label>Event Space Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NYC-Soho Lounge</fullName>
                </value>
                <value>
                    <fullName>NYC-Soho West 8th Floor</fullName>
                </value>
                <value>
                    <fullName>NYC-Bryant Park 3rd Floor</fullName>
                </value>
                <value>
                    <fullName>NYC-HQ 23rd Floor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Time_Needed__c</fullName>
        <label>Event Time Needed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type_Detail__c</fullName>
        <label>Event Type Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meetup</fullName>
                </value>
                <value>
                    <fullName>Panel</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Product Launch</fullName>
                </value>
                <value>
                    <fullName>Hackathon</fullName>
                </value>
                <value>
                    <fullName>Educational</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_date_needed__c</fullName>
        <label>Event Date Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Experiment__c</fullName>
        <label>Experiment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forceful_Assignment_Timestamp__c</fullName>
        <description>This will check for the lead created date which is going to fire the lead assignment rule forcefully after 30 min of lead creation</description>
        <formula>(CreatedDate + (7/24/60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forceful Assignment Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Forcefully_Assigned_On__c</fullName>
        <label>Forcefully Assigned On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Funding_Status__c</fullName>
        <label>Funding Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personally funded</fullName>
                </value>
                <value>
                    <fullName>Friends &amp; family</fullName>
                </value>
                <value>
                    <fullName>Crowdfunding (non-equity or debt)</fullName>
                </value>
                <value>
                    <fullName>Crowdfunding (equity or debt)</fullName>
                </value>
                <value>
                    <fullName>Angel investors</fullName>
                </value>
                <value>
                    <fullName>Venture Capital investors</fullName>
                </value>
                <value>
                    <fullName>Other financial investors (e.g., PE firm, hedge fund)</fullName>
                </value>
                <value>
                    <fullName>Strategic investors (institutional, non-financial investor)</fullName>
                </value>
                <value>
                    <fullName>Public market equity / debt funding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generate_Journey__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this check box is checked , create journey for converted lead</description>
        <label>Generate Journey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the geography record which is created when we find the market for lead.</description>
        <inlineHelpText>This field stores the geography record which is created when we find the market for lead.</inlineHelpText>
        <label>Geography</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Active_Journey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Active Journey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <label>How Did You Hear About Us</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
                <value>
                    <fullName>WeWork Member Referral</fullName>
                </value>
                <value>
                    <fullName>In the news</fullName>
                </value>
                <value>
                    <fullName>Google search</fullName>
                </value>
                <value>
                    <fullName>Desk listing site</fullName>
                </value>
                <value>
                    <fullName>Sign on the Building / Walk By</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Yelp</fullName>
                </value>
                <value>
                    <fullName>Google AdWords</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>Partnership Referral</fullName>
                </value>
                <value>
                    <fullName>Outbound Email/Cold Call</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interested_in_Number_of_Desks_Max__c</fullName>
        <description>This is received from inbound lead API in desks_interested_max</description>
        <label>Interested in Number of Desks Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interested_in_Number_of_Desks_Min__c</fullName>
        <description>This will be updated from inbound lead api with desks_interested_min</description>
        <label>Interested in Number of Desks Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interested_in_Number_of_Desks_Range__c</fullName>
        <label>Interested in Number of Desks Range</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_Number_of_Desks__c</fullName>
        <label>Interested in Number of Desk(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>